--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -9,18 +9,18 @@
   "nav_contact": "Contact",
   "hero_greeting": "Hello, I'm",
   "hero_name": "Gabriel Henrique Lins",
-  "hero_title": "Full Stack Software Engineer",
-  "hero_subtitle": "Specialist in building robust architectures and scaling end-to-end web applications.",
+  "hero_title": "Full Stack Developer",
+  "hero_subtitle": "Enthusiast in developing innovative solutions with technology, design, and impact!",
   "hero_cta1": "View Projects",
   "hero_cta2": "Connect",
   "hero_scrollDown": "Scroll down",
   "about_title": "About Me",
-  "about_subtitle": "My Journey in Software Engineering",
-  "about_description": "I'm a Full Stack Developer with a degree in Internet Systems from the Catholic University of Pernambuco (UNICAP), and I currently work as a Software Engineer in Artificial Intelligence. Additionally, I have my own Technology and Design brand. I have practical experience in academic, personal, and freelance projects carried out through my agency, as well as professional experience in developing AI solutions.",
-  "about_passion": "I'm passionate about creating complete solutions, combining backend logic with intuitive frontend interfaces. My interest in Artificial Intelligence also motivates me to develop intelligent applications that enhance digital products. I enjoy continuous learning, facing technical challenges, and applying software engineering best practices to deliver efficient, scalable, and impactful systems.",
-  "about_mission": "My goal is to continue growing as a Full Stack Developer, contributing to innovative teams to create high-quality digital products that merge cutting-edge technology, artificial intelligence, and real value for users and businesses.",
+  "about_subtitle": "My Journey in Software Development",
+  "about_description": "I'm a 20-year-old Full Stack Developer, proudly born in Recife, the capital of Pernambuco, located in Northeast Brazil. With a degree in Internet Systems from the Catholic University of Pernambuco (UNICAP), I currently work as a Software Engineer in Artificial Intelligence. Additionally, I have my own Technology and Design brand. I have practical experience in academic, personal, and freelance projects carried out through my agency, as well as professional experience in developing AI solutions.",
+  "about_passion": "I'm passionate about creating complete solutions, combining backend logic with intuitive frontend interfaces. My interest in Artificial Intelligence drives me to develop intelligent applications that enhance digital products. I enjoy continuous learning, tackling technical challenges, and applying software engineering best practices to deliver efficient, scalable, and impactful systems.",
+  "about_mission": "My goal is to continue growing as a Full Stack Developer, contributing to innovative teams to create high-quality digital products that combine cutting-edge technology, artificial intelligence, and real value for users and businesses.",
   "skills_title": "Skills",
-  "skills_subtitle": "My competencies and tools",
+  "skills_subtitle": "My technical and interpersonal competencies",
   "skills_hardSkills": "Hard Skills",
   "skills_softSkills": "Soft Skills",
   "skills_cat_frontend": "Frontend Development",
@@ -29,7 +29,7 @@
   "skills_cat_devops": "DevOps & Cloud",
   "skills_cat_databases": "Databases",
   "skills_cat_methodologies": "Agile Methodology",
-  "skill_level_advancedanat": "Advanced",
+  "skill_level_advanced": "Advanced",
   "skill_level_intermediate": "Intermediate",
   "skill_level_basic": "Basic",
   "skill_proficiency_developed": "Developed",
@@ -48,6 +48,7 @@
   "skill_name_junit": "JUnit",
   "skill_name_nodejs": "Node.js",
   "skill_name_express": "Express.js",
+  "skill_name_flask": "Flask",
   "skill_name_python": "Python",
   "skill_name_swagger": "Swagger",
   "skill_name_postman": "Postman",
@@ -55,7 +56,7 @@
   "skill_name_mysql": "MySQL",
   "skill_name_mariadb": "MariaDB",
   "skill_name_mongodb": "MongoDB",
-  "skill_name_git": "Git & Github",
+  "skill_name_git": "Git & GitHub",
   "skill_name_docker": "Docker",
   "skill_name_grafana": "Grafana",
   "skill_name_vercel": "Vercel",
@@ -73,8 +74,46 @@
   "skill_name_time_management": "Time & Priority Management",
   "skill_name_learning": "Continuous Learning",
   "skill_name_english": "Fluent English",
+  "skill_name_full_stack_development": "Full Stack Development",
+  "skill_name_web_design": "Web Design",
+  "skill_name_ui_ux": "UI/UX",
+  "skill_name_entrepreneurship": "Entrepreneurship",
+  "skill_name_project_management": "Project Management",
+  "skill_name_digital_marketing": "Digital Marketing",
+  "skill_name_visual_identity": "Visual Identity",
+  "skill_name_branding": "Branding",
+  "skill_name_customer_service": "Customer Service",
+  "skill_name_negotiation": "Negotiation",
+  "skill_name_rest_api": "REST API",
+  "skill_name_scrum": "Scrum",
+  "skill_name_pitch": "Pitch Presentation",
+  "skill_name_multidisciplinary_collaboration": "Multidisciplinary Collaboration",
+  "skill_name_low_code_madrix": "Low Code (Madrix)",
+  "skill_name_erp": "ERP",
+  "skill_name_sustainability": "Sustainability",
+  "skill_name_quality_assurance": "Quality Assurance (QA)",
+  "skill_name_test_cases": "Test Cases",
+  "skill_name_bug_reporting": "Bug Reporting",
+  "skill_name_documentation": "Documentation",
+  "skill_name_collaborative_work": "Collaborative Work",
+  "skill_name_task_management": "Task Management",
+  "skill_name_object_oriented_programming": "Object-Oriented Programming",
+  "skill_name_design_thinking": "Design Thinking",
+  "skill_name_databases": "Databases",
+  "skill_name_statistics_probability": "Statistics and Probability",
+  "skill_name_programming_logic": "Programming Logic",
+  "skill_name_frontend_react": "Frontend Programming (React)",
+  "skill_name_mobile_flutter": "Mobile Programming (Flutter)",
+  "skill_name_software_testing": "Software Testing",
+  "skill_name_operating_systems": "Operating Systems Concepts",
+  "skill_name_public_speaking": "Public Speaking",
+  "skill_name_discipline": "Discipline",
+  "skill_name_writing": "Writing",
+  "skill_name_logic": "Logic",
+  "skill_name_basic_math": "Basic Mathematics",
+  "skill_name_teamwork": "Teamwork",
   "projects_title": "Projects",
-  "projects_subtitle": "Case studies and technical contributions",
+  "projects_subtitle": "Projects I've developed or contributed to",
   "projects_viewProject": "View Project",
   "projects_viewCodeFrontend": "Frontend Code",
   "projects_viewCodeBackend": "Backend Code",
@@ -105,46 +144,46 @@
   "experience_title": "Experiences",
   "experience_subtitle": "My Professional and Academic Journey",
   "experience_present": "Present",
-  "experience_professional": "Professionals",
-  "experience_academic": "Academics",
+  "experience_professional": "Professional",
+  "experience_academic": "Academic",
   "experience_no_skills": "No skills listed",
   "exp_ggabs_company": "GGABS TECH & DESIGN",
   "exp_ggabs_position": "Founder | Tech & Design Lead",
-  "exp_ggabs_location": "São Paulo, Brazil",
-  "exp_ggabs_startDate": "2022",
+  "exp_ggabs_location": "Recife, Pernambuco, Brazil",
+  "exp_ggabs_startDate": "Apr/2025",
   "exp_ggabs_endDate": "Present",
-  "exp_ggabs_desc": "Technical leadership and architecture of Full Stack solutions, focusing on system scalability and performance. Responsible for defining tech stacks, implementing best practices, and mentoring the technical team.",
+  "exp_ggabs_desc": "Founder and responsible for all operations at GGABS Tech & Design, leading Full Stack development of websites and systems, intuitive UI/UX design, branding and visual identity, digital marketing strategies, project management, client support, and creating impactful visual experiences. I manage scalability, performance, and continuous process and digital presence optimization.",
   "exp_aicury_company": "Aicury",
   "exp_aicury_position": "AI Software Engineer",
   "exp_aicury_location": "Recife, Brazil",
   "exp_aicury_startDate": "2025",
   "exp_aicury_endDate": "Present",
-  "exp_aicury_desc": "Development and maintenance of large-scale enterprise applications. Working on all application layers, from responsive frontend to high-volume backend and database integration.",
+  "exp_aicury_desc": "Software Engineer at Aicury, focused on Artificial Intelligence solutions for system validation, security, and improvement. I build robust solutions, applying software engineering best practices and continuous monitoring to ensure performance and reliability.",
   "exp_tpf_company": "TPF Engenharia",
   "exp_tpf_position": "Low Code Developer",
-  "exp_tpf_location": "São Paulo, Brazil",
-  "exp_tpf_startDate": "2019",
-  "exp_tpf_endDate": "2020",
-  "exp_tpf_desc": "Creation of innovative and performance-optimized user interfaces. Focus on UX/UI and accessibility to ensure a seamless and inclusive user experience.",
-  "exp_cesar_company": "César",
+  "exp_tpf_location": "Recife, Pernambuco, Brazil",
+  "exp_tpf_startDate": "Mar/2024",
+  "exp_tpf_endDate": "Jul/2024",
+  "exp_tpf_desc": "Low Code Developer at TPF Engenharia, participating in the Porto Digital Grow Up Software Residency program. I developed a simple ERP system for sustainability reports using the Madrix platform, focusing on ESG process automation and data control. I applied agile methodologies (Scrum), presented the project to stakeholders with a detailed pitch, participated in alignments, and collaborated in a multidisciplinary team to create scalable solutions aligned with the company's needs.",
+  "exp_cesar_company": "CESAR",
   "exp_cesar_position": "QA Tester",
-  "exp_cesar_location": "São Paulo, Brazil",
-  "exp_cesar_startDate": "2019",
-  "exp_cesar_endDate": "2020",
-  "exp_cesar_desc": "Conducted quality assurance testing for web applications, ensuring functionality and reliability. Collaborated with development teams to identify and fix bugs.",
+  "exp_cesar_location": "Recife, Pernambuco, Brazil",
+  "exp_cesar_startDate": "Aug/2023",
+  "exp_cesar_endDate": "Dec/2023",
+  "exp_cesar_desc": "QA Tester at CESAR, participating in the Porto Digital Rise Up Software Residency program. I developed skills in software testing and quality assurance, creating and executing test cases, identifying and reporting bugs, and producing clear documentation. I collaborated in a multidisciplinary team, led projects, managed time, and applied QA best practices to deliver reliable and efficient solutions.",
   "experience_no_experience": "No experience found in this category.",
   "exp_unicap_company": "Catholic University of Pernambuco",
   "exp_unicap_position": "Internet Systems",
   "exp_unicap_location": "Recife, Pernambuco, Brazil",
   "exp_unicap_startDate": "Mar/2023",
   "exp_unicap_endDate": "Jul/2025",
-  "exp_unicap_desc": "Research and development of distributed systems and microservices architecture. Focus on scalability and fault tolerance.",
+  "exp_unicap_desc": "Degree in Internet Systems from the Catholic University of Pernambuco (UNICAP), with a focus on research and development of distributed systems and microservices architecture. I developed skills in scalability, fault tolerance, and the application of modern technologies, preparing me for challenges in software engineering.",
   "exp_cmr_company": "Recife Military School",
   "exp_cmr_position": "High School",
   "exp_cmr_location": "Recife, Pernambuco, Brazil",
   "exp_cmr_startDate": "Jan/2020",
   "exp_cmr_endDate": "Dec/2022",
-  "exp_cmr_desc": "Academic training with an emphasis on technical disciplines and the development of analytical skills.",
+  "exp_cmr_desc": "High School education at Recife Military School (CMR). This solid foundation in logic, organization, discipline, and commitment prepared me for an academic and professional career in technology.",
   "work_model_presential": "On-site",
   "work_model_remote": "Remote",
   "work_model_hybrid": "Hybrid",
@@ -152,11 +191,11 @@
   "hiring_model_clt": "Employee (CLT)",
   "hiring_model_freelance": "Freelance",
   "hiring_model_self_employed": "Self-employed",
-  "hiring_model_self_cnpq": "CNPq Scholar",
-  "hiring_model_self_temporary": "Temporary",
+  "hiring_model_cnpq": "CNPq Scholar",
+  "hiring_model_temporary": "Temporary",
   "experience_skills_title": "Skills",
-  "certificates_title": "Certificates & Courses",
-  "certificates_subtitle": "My qualifications and continuous learning",
+  "certificates_title": "Certificates",
+  "certificates_subtitle": "My continuous learning journey, including bootcamps, specialized courses, and participation in technical events",
   "certificates_viewCertificate": "View Certificate",
   "certificates_viewDetails": "View Details",
   "certificates_issuedBy": "Issued by",
@@ -182,6 +221,9 @@
   "cert_globo_title": "Globo Hackathon at Rec'n'Play",
   "cert_globo_desc": "Participation in a Globo hackathon, developing innovative solutions in a collaborative and challenging environment.",
   "cert_globo_issuer": "Globo Pernambuco",
+  "cert_easy_title": "English Course Completion Certificate",
+  "cert_easy_desc": "Completion of the Advanced II cycle of the CLASSIC English course at the institution.",
+  "cert_easy_issuer": "Inglês Easy",
   "ggabs_title": "GGABS TECH & DESIGN",
   "ggabs_subtitle": "My independent digital solutions agency",
   "ggabs_description": "GGABS Tech & Design is an independent agency specializing in tailored digital solutions. We operate at the intersection of technology and design to create unique, functional, and visually impactful experiences.",
@@ -204,6 +246,13 @@
   "contact_info_location": "Recife, Pernambuco, Brazil",
   "contact_info_location_label": "Location",
   "contact_social": "Social Media",
+  "contact_form_name_required": "Name is required",
+  "contact_form_email_required": "Email is required",
+  "contact_form_email_invalid": "Invalid email",
+  "contact_form_message_required": "Message is required",
+  "contact_form_validation_error": "Please correct the errors in the form",
+  "contact_form_success": "Message sent successfully!",
+  "contact_form_error": "An error occurred while sending the message. Please try again.",
   "footer_slogan": "Building the future of technology, one line of code at a time.",
   "footer_copyright": "© 2025 Gabriel Henrique Lins. v2.0. All rights reserved.",
   "tooltip_github": "View GitHub profile",
