--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -64,6 +64,7 @@
   "skill_name_trello": "Trello",
   "skill_name_notion": "Notion",
   "skill_name_jira": "Jira",
+  "skill_name_flask": "Flask",
   "skill_name_creativity": "Criatividade",
   "skill_name_adaptability": "Adaptablidade",
   "skill_name_leadership": "Liderança",
@@ -73,6 +74,44 @@
   "skill_name_time_management": "Gestão de Tempo & Prioridades",
   "skill_name_learning": "Aprendizado Contínuo",
   "skill_name_english": "Inglês Fluente",
+  "skill_name_full_stack_development": "Desenvolvimento Full Stack",
+  "skill_name_web_design": "Design Web",
+  "skill_name_ui_ux": "UI/UX",
+  "skill_name_entrepreneurship": "Empreendedorismo",
+  "skill_name_project_management": "Gestão de Projetos",
+  "skill_name_digital_marketing": "Marketing Digital",
+  "skill_name_visual_identity": "Identidade Visual",
+  "skill_name_branding": "Branding",
+  "skill_name_customer_service": "Atendimento ao Cliente",
+  "skill_name_negotiation": "Negociação",
+  "skill_name_rest_api": "API REST",
+  "skill_name_scrum": "Scrum",
+  "skill_name_pitch": "Apresentação (Pitch)",
+  "skill_name_multidisciplinary_collaboration": "Colaboração Multidisciplinar",
+  "skill_name_low_code_madrix": "Low Code (Madrix)",
+  "skill_name_erp": "ERP",
+  "skill_name_sustainability": "Sustentabilidade",
+  "skill_name_quality_assurance": "Garantia de Qualidade (QA)",
+  "skill_name_test_cases": "Casos de Teste",
+  "skill_name_bug_reporting": "Reporte de Bugs",
+  "skill_name_documentation": "Produção de Documentação",
+  "skill_name_collaborative_work": "Trabalho Colaborativo",
+  "skill_name_task_management": "Gestão de Tarefas",
+  "skill_name_object_oriented_programming": "Programação Orientada a Objetos",
+  "skill_name_design_thinking": "Design Thinking",
+  "skill_name_databases": "Bancos de Dados",
+  "skill_name_statistics_probability": "Estatística e Probabilidade",
+  "skill_name_programming_logic": "Lógica de Programação",
+  "skill_name_frontend_react": "Programação Frontend (React)",
+  "skill_name_mobile_flutter": "Programação Mobile (Flutter)",
+  "skill_name_software_testing": "Testes de Software",
+  "skill_name_operating_systems": "Conceitos de Sistemas Operacionais",
+  "skill_name_public_speaking": "Apresentação em Público",
+  "skill_name_discipline": "Disciplina",
+  "skill_name_writing": "Redação",
+  "skill_name_logic": "Lógica",
+  "skill_name_basic_math": "Matemática Básica",
+  "skill_name_teamwork": "Trabalho em Equipe",
   "projects_title": "Projetos",
   "projects_subtitle": "Os projetos que já desenvolvi ou participei no desenvolvimento",
   "projects_viewProject": "Ver Projeto",
@@ -218,11 +257,12 @@
   "footer_copyright": "© 2025 Gabriel Henrique Lins. v2.0. Todos os direitos reservados.",
   "tooltip_github": "Ver perfil no GitHub",
   "tooltip_linkedin": "Ver perfil no LinkedIn",
-  "tooltip_resume": "Ver meu currículo (PDF)",
+  "tooltip_resume": "Ver meu currículo",
   "tooltip_viewProjects": "Navegar para a seção de projetos",
   "tooltip_connect": "Conectar-se para novas oportunidades",
   "tooltip_scrollDown": "Ir para a seção Sobre Mim",
   "tooltip_footer_github": "Ver perfil no GitHub",
   "tooltip_footer_linkedin": "Ver perfil no LinkedIn",
-  "tooltip_footer_instagram": "Ver perfil no Instagram"
+  "tooltip_footer_instagram": "Ver perfil no Instagram",
+  "tooltip_footer_resume": "Ver meu Currículo"
 }
