corrige rota para meu portfoliop nos links

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -282,7 +282,7 @@
     {
       "id": 1,
       "title": "My Professional Portfolio",
-      "url": "/home",
+      "url": "/",
       "highlight": true
     },
     {
