--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -283,7 +283,7 @@
     {
       "id": 1,
       "title": "Meu Portfólio Profissional",
-      "url": "/home",
+      "url": "/",
       "highlight": true
     },
     {
