atualiza curriculo, corrige footer e atualiza certos textos

--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -18,18 +18,22 @@
   "about_title": "Sobre Mim",
   "about_subtitle": "Minha trajetória em Desenvolvimento de Software",
   "about_description": "Sou um Desenvolvedor Full Stack de 20 anos, natural com muito orgulho de Recife, capital do estado de Pernambuco, localizado no Nordeste brasileiro. Formado em Sistemas para Internet pela Universidade Católica de Pernambuco (UNICAP), atualmente atuo como Engenheiro de Software em Inteligência Artificial. Além disso, tenho minha própria marca de Tecnologia e Design. Tenho experiência prática em projetos acadêmicos, pessoais e freelances realizados através da minha agência, além de atuação profissional no desenvolvimento de soluções com IA.",
-  "about_passion": "Tenho paixão por criar soluções completas, unindo lógica de Back End e interfaces intuitivas de Front End. Além disso, meu interesse em Inteligência Artificial me motiva a desenvolver aplicações inteligentes que potencializam produtos digitais. Gosto de aprender continuamente, enfrentar desafios técnicos e aplicar boas práticas de engenharia de software para entregar sistemas eficientes, escaláveis e de impacto.",
-  "about_mission": "Meu objetivo é continuar evoluindo como Desenvolvedor Full Stack, contribuindo com equipes inovadoras para criar produtos digitais de alta qualidade, que unam tecnologia de ponta, inteligência artificial e valor real para usuários e negócios.",
+  "about_passion": "Construo soluções completas, conectando o back-end à experiência do usuário no front-end. Meu objetivo é desenvolver aplicações inteligentes que impulsionem produtos digitais. Tenho paixão por aprender continuamente e superar desafios técnicos, sempre com foco em boas práticas para entregar sistemas eficientes, escaláveis e de alto impacto.",
+  "about_mission": "Meu objetivo é continuar evoluindo como Desenvolvedor Full Stack, contribuindo com equipes inovadoras para criar produtos digitais de alta qualidade, que unam tecnologia de ponta e valor real para usuários e negócios.",
   "skills_title": "Habilidades",
   "skills_subtitle": "Minhas competências técnicas e interpessoais",
   "skills_hardSkills": "Hard Skills",
   "skills_softSkills": "Soft Skills",
-  "skills_cat_frontend": "Desenvolvimento Frontend",
-  "skills_cat_backend": "Desenvolvimento Backend",
+  "skills_cat_frontend": "Frontend",
+  "skills_cat_backend": "Backend",
   "skills_cat_design": "Design de Produto & UX/UI",
   "skills_cat_devops": "DevOps & Cloud",
   "skills_cat_databases": "Banco de Dados",
   "skills_cat_methodologies": "Metodologia ágil",
+  "skills_cat_tests": "Testes",
+  "skills_cat_versioning": "Versionamento e Documentação",
+  "skills_cat_styling": "Estilização",
+  "skills_cat_others": "Outros",
   "skill_level_advanced": "Avançado",
   "skill_level_intermediate": "Intermediário",
   "skill_level_basic": "Básico",
@@ -56,7 +60,8 @@
   "skill_name_mysql": "MySQL",
   "skill_name_mariadb": "MariaDB",
   "skill_name_mongodb": "MongoDB",
-  "skill_name_git": "Git & Github",
+  "skill_name_git": "Git",
+  "skill_name_github": "Github",
   "skill_name_docker": "Docker",
   "skill_name_grafana": "Grafana",
   "skill_name_vercel": "Vercel",
@@ -66,6 +71,19 @@
   "skill_name_notion": "Notion",
   "skill_name_jira": "Jira",
   "skill_name_flask": "Flask",
+  "skill_name_fastapi": "FastAPI",
+  "skill_name_shadcn": "Shadcn/ui",
+  "skill_name_chakraui": "Chakra UI",
+  "skill_name_sequelize": "Sequelize",
+  "skill_name_terraform": "Terraform",
+  "skill_name_jenkins": "Jenkins",
+  "skill_name_githubactions": "Github actions",
+  "skill_name_pytest": "Pytest",
+  "skill_name_jest": "Jest",
+  "skill_name_apidog": "Apidog",
+  "skill_name_render": "Render",
+  "skill_name_railway": "Railway",
+  "skill_name_hibernate": "Hibernate",
   "skill_name_creativity": "Criatividade",
   "skill_name_adaptability": "Adaptablidade",
   "skill_name_leadership": "Liderança",
