--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,18 +18,22 @@
   "about_title": "About Me",
   "about_subtitle": "My Journey in Software Development",
   "about_description": "I'm a 20-year-old Full Stack Developer, proudly born in Recife, the capital of Pernambuco, located in Northeast Brazil. With a degree in Internet Systems from the Catholic University of Pernambuco (UNICAP), I currently work as a Software Engineer in Artificial Intelligence. Additionally, I have my own Technology and Design brand. I have practical experience in academic, personal, and freelance projects carried out through my agency, as well as professional experience in developing AI solutions.",
-  "about_passion": "I'm passionate about creating complete solutions, combining backend logic with intuitive frontend interfaces. My interest in Artificial Intelligence drives me to develop intelligent applications that enhance digital products. Enjoy continuous learning, tackling technical challenges, and applying software engineering best practices to deliver efficient, scalable, and impactful systems.",
-  "about_mission": "My goal is to continue growing as a Full Stack Developer, contributing to innovative teams to create high-quality digital products that combine cutting-edge technology, artificial intelligence, and real value for users and businesses.",
+  "about_passion": "I build end-to-end solutions, connecting the back-end to the user experience on the front-end. My goal is to develop intelligent applications that drive digital products forward. I'm passionate about continuous learning and overcoming technical challenges, always focusing on best practices to deliver efficient, scalable, and high-impact systems.",
+  "about_mission": "My goal is to continue growing as a Full Stack Developer, contributing to innovative teams to create high-quality digital products that combine cutting-edge technology and real value for users and businesses.",
   "skills_title": "Skills",
   "skills_subtitle": "My technical and interpersonal competencies",
   "skills_hardSkills": "Hard Skills",
   "skills_softSkills": "Soft Skills",
-  "skills_cat_frontend": "Frontend Development",
-  "skills_cat_backend": "Backend Development",
+  "skills_cat_frontend": "Frontend",
+  "skills_cat_backend": "Backend",
   "skills_cat_design": "Product Design & UX/UI",
   "skills_cat_devops": "DevOps & Cloud",
   "skills_cat_databases": "Databases",
   "skills_cat_methodologies": "Agile Methodology",
+  "skills_cat_tests": "Testing",
+  "skills_cat_versioning": "Versioning & Documentation",
+  "skills_cat_styling": "Styling",
+  "skills_cat_others": "Others",
   "skill_level_advanced": "Advanced",
   "skill_level_intermediate": "Intermediate",
   "skill_level_basic": "Basic",
@@ -57,7 +61,8 @@
   "skill_name_mysql": "MySQL",
   "skill_name_mariadb": "MariaDB",
   "skill_name_mongodb": "MongoDB",
-  "skill_name_git": "Git & GitHub",
+  "skill_name_git": "Git",
+  "skill_name_github": "Github",
   "skill_name_docker": "Docker",
   "skill_name_grafana": "Grafana",
   "skill_name_vercel": "Vercel",
@@ -66,6 +71,19 @@
   "skill_name_trello": "Trello",
   "skill_name_notion": "Notion",
   "skill_name_jira": "Jira",
+  "skill_name_fastapi": "FastAPI",
+  "skill_name_shadcn": "Shadcn/ui",
+  "skill_name_chakraui": "Chakra UI",
+  "skill_name_sequelize": "Sequelize",
+  "skill_name_terraform": "Terraform",
+  "skill_name_jenkins": "Jenkins",
+  "skill_name_githubactions": "Github actions",
+  "skill_name_pytest": "Pytest",
+  "skill_name_jest": "Jest",
+  "skill_name_apidog": "Apidog",
+  "skill_name_render": "Render",
+  "skill_name_railway": "Railway",
+  "skill_name_hibernate": "Hibernate",
   "skill_name_creativity": "Creativity",
   "skill_name_adaptability": "Adaptability",
   "skill_name_leadership": "Leadership",
